# spotify-discover-enhanced

./: .flaskenv  .gitignore  Audio Features.ipynb  LICENSE  README.md  Spotify Scratchwork.ipynb  discover_enhanced.py  requirements.txt  setup.cfg
app/: __init__.py  app_test.py  auth.py  config.py  forms.py  models.py  routes.py  views.py
app/oauth/: forms.py  models.py  scripts.py
app/scripts/: db.py  dev.py  enhancer.py
app/static/css/: main.css
app/templates/: callback.html  discover_enhanced.html  layout.html
migrations/versions/: 3081858400f6_users_table.py
samples/: audio_features.json  playlist.json
src/app/: app.py
src/app/scripts/: archive.py  data.py  dev.py  render.py
src/app/static/css/: main.css
src/app/templates/: about.html  callback.html  discover_enhanced.html  home.html  layout.html
src/db/: __init__.py  create_db.py  create_discover_db.py
src/worker/: enhancer.py
test/: test_models.py
test/app/scripts/: test_data.py
test/samples/: track.json
test/worker/: test_data.py
