[metadata]
name = spotify_discover_enhanced
description = App to enhance and save Spotify Discover Weekly playlists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nachomaiz/spotify-discover-enhanced
download_url = https://github.com/nachomaiz/spotify-discover-enhanced
version = file: VERSION
author = nachomaiz
author_email = ignacio.maiz@gmail.com
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
install_requires = 
    matplotlib
    pandas
    spotipy
    flask
    psycopg; python_version >= "3.10"

[options.packages.find]
exclude = 
    test*
    credentials*
